[tool.poetry]
name = "harness"
version = "0.1.0"
description = "TBD"
authors = ["Carson Wilkins <carson.wilkins@databricks.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark-gcs = "^2.2.6.1"
databricks-cli = "^0.17.7"
databricks-connect = "^13.1.0"
pydantic-config = "^0.1.1"
pydantic = "^1.10.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
nutter = "^0.1.35"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
