[tool.poetry]
name = "harness"
version = "0.1.0"
description = "TBD"
authors = ["Carson Wilkins <carson.wilkins@databricks.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.6"
databricks-cli = "^0.17.7"
pydantic-config = "^0.1.1"
pydantic = "^1.10.8"
databricks-sdk = "^0.1.8"
datacompy = {version="^0.10.1", extras=["spark"]}
pyspark = "^3.4.0"
delta-spark = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
nutter = "^0.1.35"
faker = "^18.10.1"
pytest-mock = "^3.10.0"
isort = "^5.12.0"
black = "^23.3.0"
pytest-faker = "^2.0.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
